--- a/src/Css/Common.css
+++ b/src/Css/Common.css
@@ -38,31 +38,16 @@
     color: black;
 }
 
-.phoneNumber {
-    display: flex;
+.emailOrPass {
+    display: block;
     width: 100%;
-    min-height: 2.8rem;
-    padding: 0.4rem;
-    border: 1px solid var(--whiteBorder);
-    border-radius: 6px;
-    margin-bottom: 2rem;
-}
-
-.countrySelect {
-    display: flex;
-    align-items: center;
-}
-
-.flagAndCode{
-    display: flex;
-    /* justify-content: center; horizontal  */
-    align-items: center;
-}
-
-.flagImage {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+    height: 44px;
+    margin-bottom: 1.2rem;
+    font-size: 1.2rem;
+    border-radius: 0.4rem;
+    outline: none;
+    border: 0.1rem solid rgb(207, 207, 207);
+    padding: 1.3rem 1.2rem;
 }
 
 .countryInputDivider {
@@ -70,14 +55,6 @@
     height: 2.4rem;
     border-right: 1px solid rgb(207, 207, 207);
     margin-left: 1rem;
-}
-
-.phoneNumberInput {
-    /* height: 100%; */
-    width: 100%;
-    outline: none;
-    border: none;
-    font-size: 1.4rem;
 }
 
 .OtpButton {
