--- a/src/Css/HomePage.css
+++ b/src/Css/HomePage.css
@@ -1,3 +1,6 @@
+.image-container{
+  z-index: -100;
+}
 .home__background-image {
     background-image: url('https://images.unsplash.com/photo-1605522561233-768ad7a8fabf?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2072&q=80');
-  }
+}
