--- a/src/Css/Common.css
+++ b/src/Css/Common.css
@@ -30,28 +30,32 @@ a{
     overflow: hidden;
 }
 
-.background-image {
+.background_image {
     /* position: absolute; */
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-size: cover;
     background-position: center;
-    filter: blur(4px); /* Apply a 50% blur effect (you can adjust the value as needed) */
+    /* filter: blur(4px); Apply a 50% blur effect (you can adjust the value as needed) */
+    background-color: rgba(0, 0, 0, 0.75);
     z-index: -100;
   }
-.home__background-image {
-    background-image: url('https://images.unsplash.com/photo-1605522561233-768ad7a8fabf?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2072&q=80');
-}
 
 .Backdrop{
     background-color: var(--black);
-    opacity: 0.8; 
+    opacity: 0.3; 
     height: 100vh;
     width: 100vw;
     position: absolute;
     top: 0;
     left: 0;
     z-index: -100;
+}
+
+.flex_middle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
